--- a/app/src/main/res/layout/activity_mainscreen.xml
+++ b/app/src/main/res/layout/activity_mainscreen.xml
@@ -6,7 +6,13 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     tools:context=".AdminMainscreen">
-
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:gravity="center"
@@ -198,6 +204,10 @@
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 
+
+        </LinearLayout>
+
+    </ScrollView>
 
 
 </LinearLayout>
