added fab, models change, added batches and subjects

--- a/app/src/main/res/layout/activity_student_screen.xml
+++ b/app/src/main/res/layout/activity_student_screen.xml
@@ -4,11 +4,23 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".StudentScreen">
+    tools:context=".Students">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/studentrecycler"/>
+
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/white"
+        android:onClick="reg"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_baseline_group_add_24"
+        />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
