--- a/app/src/main/res/layout/activity_mainscreen.xml
+++ b/app/src/main/res/layout/activity_mainscreen.xml
@@ -23,7 +23,7 @@
             android:layout_width="150dp"
             app:cardCornerRadius="10dp"
             android:clickable="true"
-            android:onClick="registerstudents"
+            android:onClick="openbatches"
             android:focusable="true"
             android:layout_marginStart="10dp"
             app:cardBackgroundColor="#FF9800"
@@ -39,7 +39,7 @@
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-                    android:text="Register Student"/>
+                    android:text="Batches"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     app:tint="@color/white"
@@ -88,7 +88,7 @@
             app:cardCornerRadius="10dp"
             android:clickable="true"
             android:focusable="true"
-            android:onClick="teacherregistration"
+            android:onClick="opensubjects"
             android:layout_marginStart="10dp"
             app:cardBackgroundColor="#FF9800"
             android:layout_height="150dp" >
@@ -103,7 +103,7 @@
                     android:gravity="center"
                     android:textColor="@color/white"
                     android:textStyle="bold"
-                    android:text="Add Teachers"/>
+                    android:text="Subjects"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     app:tint="@color/white"
@@ -132,69 +132,6 @@
                     android:textColor="@color/white"
                     android:textStyle="bold"
                     android:text="Teachers"/>
-                <ImageView
-                    android:layout_width="wrap_content"
-                    app:tint="@color/white"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_how_to_reg_24"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:gravity="center"
-         android:layout_marginTop="10dp"
-        android:orientation="horizontal"
-        android:layout_height="wrap_content">
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="150dp"
-            app:cardCornerRadius="10dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:layout_marginStart="10dp"
-            app:cardBackgroundColor="#FF9800"
-            android:layout_height="150dp" >
-            <LinearLayout
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:text="Register Student"
-                    android:textColor="@color/white"
-                    android:textStyle="bold" />
-                <ImageView
-                    android:layout_width="wrap_content"
-                    app:tint="@color/white"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/ic_baseline_how_to_reg_24"/>
-            </LinearLayout>
-        </com.google.android.material.card.MaterialCardView>
-        <com.google.android.material.card.MaterialCardView
-            android:layout_width="150dp"
-            app:cardCornerRadius="10dp"
-            android:clickable="true"
-            android:focusable="true"
-            android:layout_marginStart="10dp"
-            app:cardBackgroundColor="#FF9800"
-            android:layout_height="150dp" >
-            <LinearLayout
-                android:gravity="center"
-                android:layout_width="match_parent"
-                android:orientation="vertical"
-                android:layout_height="match_parent">
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:text="Register Student"/>
                 <ImageView
                     android:layout_width="wrap_content"
                     app:tint="@color/white"
