--- a/app/src/main/res/layout/activity_teachers_screen.xml
+++ b/app/src/main/res/layout/activity_teachers_screen.xml
@@ -4,10 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".TeachersScreen">
+    tools:context=".Teachers">
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/teacherrecycler"/>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:tint="@color/white"
+        android:onClick="reg"
+        android:layout_margin="10dp"
+        android:src="@drawable/ic_baseline_group_add_24"
+        />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
