--- a/app/src/main/res/layout/activity_teachers_screen.xml
+++ b/app/src/main/res/layout/activity_teachers_screen.xml
@@ -4,12 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Teachers">
+    tools:context=".Screens.Teachers">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/teacherrecycler"/>
+    </LinearLayout>
+    </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:layout_width="wrap_content"
@@ -19,7 +29,6 @@
         app:tint="@color/white"
         android:onClick="reg"
         android:layout_margin="10dp"
-        android:src="@drawable/ic_baseline_group_add_24"
-        />
+        android:src="@drawable/ic_baseline_group_add_24"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
