--- a/app/src/main/res/layout/activity_add_batches.xml
+++ b/app/src/main/res/layout/activity_add_batches.xml
@@ -5,41 +5,31 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".admin.RegisterTeacher">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-
-        <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:id="@+id/teachername"
-        android:layout_marginHorizontal="10dp"
-        android:hint="Teacher name"
-        />
+    tools:context=".admin.AddBatches">
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:id="@+id/teacherusername"
+        android:id="@+id/batchtitle"
         android:layout_marginHorizontal="10dp"
-        android:hint="Enter Username"
+        android:hint="Enter Batch Title"
         />
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:id="@+id/teacherpassword"
+        android:id="@+id/startyear"
         android:layout_marginHorizontal="10dp"
-        android:hint="Enter Password"
+        android:hint="Enter Start year"
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:id="@+id/endyear"
+        android:layout_marginHorizontal="10dp"
+        android:hint="Enter End year"
         />
     <Button
         android:layout_width="match_parent"
@@ -48,7 +38,7 @@
         android:onClick="submit"
         android:text="Submit"/>
 
-        </LinearLayout>
-    </ScrollView>
+
+
 
 </LinearLayout>
