--- a/app/src/main/res/layout/activity_add_subjects.xml
+++ b/app/src/main/res/layout/activity_add_subjects.xml
@@ -5,42 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".admin.RegisterTeacher">
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+    tools:context=".admin.AddSubjects">
 
-
-        <EditText
+    <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:id="@+id/teachername"
+        android:id="@+id/subcode"
         android:layout_marginHorizontal="10dp"
-        android:hint="Teacher name"
+        android:hint="Enter Subject code"
         />
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:id="@+id/teacherusername"
+        android:id="@+id/subname"
         android:layout_marginHorizontal="10dp"
-        android:hint="Enter Username"
+        android:hint="Enter Subject Name"
         />
 
-    <EditText
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:padding="20dp"
-        android:id="@+id/teacherpassword"
-        android:layout_marginHorizontal="10dp"
-        android:hint="Enter Password"
-        />
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -48,7 +33,7 @@
         android:onClick="submit"
         android:text="Submit"/>
 
-        </LinearLayout>
-    </ScrollView>
+
+
 
 </LinearLayout>
