--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-        android:text="Login"
+        android:text="LOGIN"
+        android:textStyle="bold"
         android:id="@+id/loginview"
         android:layout_marginTop="50dp"
         android:textColor="@color/mycolor"
@@ -51,23 +52,23 @@
     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="match_parent"
 
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="40dp"
         android:hint="Select account type"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:padding="15dp">
         <com.google.android.material.textfield.MaterialAutoCompleteTextView
             android:layout_width="match_parent"
             android:id="@+id/dropdownmenu"
             android:inputType="none"
             android:enabled="false"
-
             android:layout_height="wrap_content"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="80dp"
         android:id="@+id/login"
         android:onClick="openlogin"
         android:padding="15dp"
