--- a/app/src/main/res/layout/activity_register_student.xml
+++ b/app/src/main/res/layout/activity_register_student.xml
@@ -15,20 +15,37 @@
         android:layout_marginHorizontal="10dp"
         android:hint="Enter student name"
         />
-
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:id="@+id/cnic"
+        android:id="@+id/studentbatch"
         android:layout_marginHorizontal="10dp"
-        android:hint="Enter student roll no"
+        android:hint="Enter Batch"
         />
     <EditText
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
+        android:id="@+id/studentsemester"
+        android:layout_marginHorizontal="10dp"
+        android:hint="Enter Semester"
+        />
+
+
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
         android:id="@+id/roll"
+        android:layout_marginHorizontal="10dp"
+        android:hint="Enter Roll no"
+        />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:id="@+id/studentusername"
         android:layout_marginHorizontal="10dp"
         android:hint="Enter Username"
         />
@@ -37,7 +54,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="20dp"
-        android:id="@+id/surname"
+        android:id="@+id/studentpassword"
         android:layout_marginHorizontal="10dp"
         android:hint="Enter Password"
         />
