--- a/app/src/main/res/layout/checkboxstudent.xml
+++ b/app/src/main/res/layout/checkboxstudent.xml
@@ -1,9 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginHorizontal="10dp"
     android:layout_marginTop="10dp"
+    android:clickable="true"
+    android:focusable="true"
     app:cardElevation="4dp"
     app:cardCornerRadius="8dp"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -12,24 +15,24 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
-        <ImageView
-            android:layout_width="40dp"
-            android:layout_height="40dp"
+       <!-- <ImageView
+            android:layout_width="50dp"
+            android:layout_height="50dp"
             android:id="@+id/img_std_design"
             app:layout_constraintStart_toStartOf="parent"
             android:src="@drawable/subject"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"/>-->
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Subject Name"
-            android:textSize="15dp"
+            android:textSize="20dp"
             android:layout_marginHorizontal="5dp"
             android:id="@+id/subjectname"
             android:textColor="@color/black"
-            app:layout_constraintStart_toEndOf="@id/img_std_design"
-            app:layout_constraintTop_toTopOf="parent"/>
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="MissingConstraints" />
 
         <TextView
             android:layout_width="wrap_content"
@@ -39,9 +42,18 @@
             android:textColor="@color/black"
             android:layout_marginHorizontal="5dp"
             app:layout_constraintTop_toBottomOf="@id/subjectname"
-            app:layout_constraintStart_toEndOf="@id/img_std_design"
-            />
+            tools:ignore="MissingConstraints" />
 
+
+        <CheckBox
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:clickable="true"
+            android:focusable="true"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:id="@+id/checkboxstudent"
+            app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </com.google.android.material.card.MaterialCardView>
