--- a/app/src/main/res/layout/designteacher.xml
+++ b/app/src/main/res/layout/designteacher.xml
@@ -11,13 +11,13 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content">
         <ImageView
-            android:layout_width="50dp"
-            android:layout_height="50dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:id="@+id/img_teacher_design"
             app:layout_constraintStart_toStartOf="parent"
-            android:src="@drawable/teachers"
+            android:src="@drawable/teacher"
             app:layout_constraintTop_toTopOf="parent"/>
 
         <TextView
@@ -25,20 +25,10 @@
             android:layout_height="wrap_content"
             android:text="Teacher Name"
             android:textSize="22dp"
-            android:layout_marginHorizontal="7dp"
+            android:layout_marginHorizontal="5dp"
             android:id="@+id/teachername"
             android:textColor="@color/black"
-            app:layout_constraintStart_toEndOf="@id/img_teacher_design"
-            app:layout_constraintTop_toTopOf="parent"/>
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Computer Department"
-            android:layout_marginHorizontal="7dp"
-            android:id="@+id/dept"
-            android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/teachername"
-            app:layout_constraintStart_toEndOf="@id/img_teacher_design"/>
+            app:layout_constraintStart_toEndOf="@id/img_teacher_design" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
