--- a/app/src/main/res/layout/activity_attendence.xml
+++ b/app/src/main/res/layout/activity_attendence.xml
@@ -3,26 +3,35 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:orientation="vertical"
     android:layout_height="match_parent"
-    tools:context=".TeacherMainscreen">
+    tools:context=".Attendence">
 
-    <TextView
+    <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Welcome"
-        android:id="@+id/welcome"
-        android:layout_margin="10dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:textSize="20dp"
-        android:textColor="@color/black"/>
+        android:id="@+id/selectdate"
+        android:layout_marginHorizontal="20dp"
+        android:text="Select date"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/recycler_teacherportal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/welcome"
+        android:id="@+id/recyclerview_attendence_student"
+        app:layout_constraintTop_toBottomOf="@id/selectdate"
+        app:layout_constraintBottom_toTopOf="@id/submit_attendence"
+
         />
+
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/submit_attendence"
+        android:layout_marginHorizontal="20dp"
+        android:padding="5dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:text="Submit"/>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
