--- a/app/src/main/res/layout/designaddsubjects.xml
+++ b/app/src/main/res/layout/designaddsubjects.xml
@@ -13,6 +13,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:paddingHorizontal="10dp"
         android:layout_height="match_parent">
         <ImageView
             android:layout_width="50dp"
