--- a/app/src/main/res/layout/designbatch.xml
+++ b/app/src/main/res/layout/designbatch.xml
@@ -11,6 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:padding="10dp"
         android:layout_height="match_parent">
         <ImageView
             android:layout_width="50dp"
