--- a/app/src/main/res/layout/designteacher.xml
+++ b/app/src/main/res/layout/designteacher.xml
@@ -11,6 +11,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
+        android:padding="10dp"
         android:layout_height="wrap_content">
         <ImageView
             android:layout_width="40dp"
@@ -25,6 +26,7 @@
             android:layout_height="wrap_content"
             android:text="Teacher Name"
             android:textSize="22dp"
+            app:layout_constraintTop_toTopOf="parent"
             android:layout_marginHorizontal="5dp"
             android:id="@+id/teachername"
             android:textColor="@color/black"
