--- a/app/src/main/res/layout/activity_attendence.xml
+++ b/app/src/main/res/layout/activity_attendence.xml
@@ -6,47 +6,33 @@
     android:layout_height="match_parent"
     tools:context=".Attendence">
 
-    <Button
-        android:layout_width="0dp"
+    <com.google.android.material.tabs.TabLayout
+        android:id="@+id/tablayout"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:id="@+id/selectdate"
-        android:layout_marginStart="20dp"
-        app:layout_constraintEnd_toStartOf="@+id/qr"
-        android:text="Select date"/>
+        >
 
-    <ImageButton
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:background="@color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:id="@+id/qr"
-        android:onClick="generateqrcode"
-        app:layout_constraintTop_toTopOf="@id/selectdate"
-        android:layout_marginEnd="20dp"
-        app:layout_constraintBottom_toBottomOf="@id/selectdate"
-        android:src="@drawable/ic_baseline_qr_code_scanner_24"/>
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Attendence" />
 
-    <androidx.recyclerview.widget.RecyclerView
+        <com.google.android.material.tabs.TabItem
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Reports" />
+    </com.google.android.material.tabs.TabLayout>
+
+    <androidx.fragment.app.FragmentContainerView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:id="@+id/recyclerview_attendence_student"
-        app:layout_constraintTop_toBottomOf="@id/selectdate"
-        app:layout_constraintBottom_toTopOf="@id/submit_attendence"
+        android:id="@+id/layoutframgnet"
 
-        />
-
-
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:id="@+id/submit_attendence"
-        android:layout_marginHorizontal="20dp"
-        android:onClick="submittofirebase"
-        android:padding="5dp"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:text="Submit"/>
+        app:layout_constraintTop_toBottomOf="@id/tablayout"
+        android:name="com.techsam.attendencesystemuser.AttendenceFragment"
+        tools:layout="@layout/fragment_attendence" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
