--- a/app/src/main/res/layout/activity_add_subjects.xml
+++ b/app/src/main/res/layout/activity_add_subjects.xml
@@ -24,6 +24,15 @@
         android:layout_marginHorizontal="10dp"
         android:hint="Enter Subject Name"
         />
+    <EditText
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="20dp"
+        android:id="@+id/credithours"
+        android:inputType="number"
+        android:layout_marginHorizontal="10dp"
+        android:hint="Enter Credit hours"
+        />
 
 
     <Button
