--- a/app/src/main/res/layout/activity_mainscreen.xml
+++ b/app/src/main/res/layout/activity_mainscreen.xml
@@ -141,6 +141,8 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_marginTop="20dp"
                 android:orientation="horizontal">
 
                 <com.google.android.material.card.MaterialCardView
@@ -149,6 +151,34 @@
                     android:clickable="true"
                     android:focusable="true"
                     android:onClick="openreports"
+                    android:layout_marginStart="10dp"
+                    app:cardBackgroundColor="@color/mycolor"
+                    android:layout_height="150dp" >
+                    <LinearLayout
+                        android:gravity="center"
+                        android:layout_width="match_parent"
+                        android:orientation="vertical"
+                        android:layout_height="match_parent">
+                        <ImageView
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:src="@drawable/teachers"/>
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:textColor="@color/white"
+                            android:textStyle="bold"
+                            android:text="Reports"/>
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+                <com.google.android.material.card.MaterialCardView
+                    android:layout_width="150dp"
+                    app:cardCornerRadius="10dp"
+                    android:clickable="true"
+                    android:visibility="invisible"
+                    android:focusable="true"
                     android:layout_marginStart="10dp"
                     app:cardBackgroundColor="@color/mycolor"
                     android:layout_height="150dp" >
